--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore --fix src",
-    "prettier": "prettier src --write"
+    "prettier": "prettier src --write",
+    "deploy:s3": "serverless client deploy --no-config-change --no-policy-change --no-cors-change"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -25,6 +26,8 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
+    "serverless": "^3.31.0",
+    "serverless-finch": "^4.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
